fix typo in loop

--- a/spinner_rosella.html
+++ b/spinner_rosella.html
@@ -152,10 +152,10 @@ function setClicked(m){ //mutArc1_0 mutArc2_0 mutArc3_0 etc
 	var arrayelements=Array.prototype.slice.call(document.getElementsByClassName('clickedM'));
 var arrlength=arrayelements.length;
 //for(element of elements){
-or(var i=0;i<arrlength;i++){
+for(var i=0;i<arrlength;i++){
 	//console.log('removing ' + element.id);
   //element.classList.remove('clickedM');
-  arrayelements[i].classList.remove('clickedM')//setAttribute("class","blank");
+  arrayelements[i].classList.remove('clickedM');//setAttribute("class","blank");
   
 }
 
