make text elements have onclick event to change class

--- a/Cornish_spinner_gwarak/spinner_gwarak.html
+++ b/Cornish_spinner_gwarak/spinner_gwarak.html
@@ -388,6 +388,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc2_"+i;})
+			.attr("id",function(d,i){return "t_mutArc2_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[0][i];});	
 			
 			svg.selectAll(".mutText3")
@@ -398,6 +400,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc3_"+i;})
+			.attr("id",function(d,i){return "t_mutArc3_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[1][i];});		
 			
 			svg.selectAll(".mutText4")
@@ -408,6 +412,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc4_"+i;})
+			.attr("id",function(d,i){return "t_mutArc4_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[2][i];});	
 			
 			svg.selectAll(".mutText5")
@@ -418,6 +424,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc5_"+i;})
+			.attr("id",function(d,i){return "t_mutArc5_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[3][i];});	
 			
 			svg.selectAll(".mutText6")
@@ -428,6 +436,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc6_"+i;})
+			.attr("id",function(d,i){return "t_mutArc6_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[4][i];});	
 			
 			
@@ -439,6 +449,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc7_"+i;})
+			.attr("id",function(d,i){return "t_mutArc7_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[5][i];});
 			
 			svg.selectAll(".mutText8")
@@ -449,6 +461,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc8_"+i;})
+			.attr("id",function(d,i){return "t_mutArc8_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[6][i];});
 			
 			svg.selectAll(".mutText9")
@@ -459,6 +473,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc9_"+i;})
+			.attr("id",function(d,i){return "t_mutArc9_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[7][i];});
 			
 			svg.selectAll(".mutText10")
@@ -469,6 +485,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc10_"+i;})
+			.attr("id",function(d,i){return "t_mutArc10_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[8][i];});
 			
 			svg.selectAll(".mutText11")
@@ -479,6 +497,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc11_"+i;})
+			.attr("id",function(d,i){return "t_mutArc11_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[9][i];});
 			
 			svg.selectAll(".mutText12")
@@ -489,6 +509,8 @@ for(var i=0;i<arrlengthR;i++){
 			.attr("dy", 18) //Move the text down
 		   .append("textPath")
 			.attr("xlink:href",function(d,i){return "#mutArc12_"+i;})
+			.attr("id",function(d,i){return "t_mutArc12_"+i;})
+			.attr("onclick",'setClicked(this.id,1)')
 			.text(function(d,i){return mutations[10][i];});
 			
 			
