--- a/spinner_rosella.html
+++ b/spinner_rosella.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-	<title>Mutations on an Arc</title>
+	<title>Kernowek letter mutations - Rosella (rotate)</title>
 
 	<!-- D3.js -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
