--- a/Cornish_spinner_gwarak/spinner_gwarak.html
+++ b/Cornish_spinner_gwarak/spinner_gwarak.html
@@ -229,7 +229,7 @@ for(var i=0;i<arrlengthR;i++){
 		document.getElementById('mutArc' + i + ss).classList.add('clickedM');
 	}else if(i < 6){
 		document.getElementById(m).classList.add('clickedM'); //FIX make this a different coloured class
-		console.log('adding ' + 'mutArc' + i + ss);
+		//console.log('adding ' + 'mutArc' + i + ss);
 		document.getElementById('mutArc' + mb + '_' + i).classList.add('clickedM');
 		document.getElementById('mutArc' + mb + '_' + 0).classList.add('clickedMR');
 	}else{
